--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,13 +10,13 @@
         android:id="@+id/activity_main_topbar"
         layout="@layout/top_bar"></include>
 
-    <android.support.v4.view.ViewPager
+    <com.example.longjoy.parttimejob.widget.CustomViewPager
         android:id="@+id/activity_main_framelayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@+id/activity_main_rg_tabs"
         android:layout_below="@id/activity_main_topbar"
-        android:orientation="vertical"></android.support.v4.view.ViewPager>
+        android:orientation="vertical"></com.example.longjoy.parttimejob.widget.CustomViewPager>
 
 
     <RadioGroup
