首页页面调整

--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -131,12 +131,13 @@
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="160dp"
+                android:layout_height="wrap_content"
                 android:orientation="vertical">
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -162,6 +163,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -205,6 +207,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -239,6 +242,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -253,7 +257,7 @@
                     <TextView
                         android:id="@+id/activity_job_detail_place"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:paddingLeft="12dp"
                         android:text="渝中区"
@@ -264,6 +268,7 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -278,7 +283,7 @@
                     <TextView
                         android:id="@+id/activity_job_detail_addr"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
+                        android:layout_height="wrap_content"
                         android:gravity="center"
                         android:paddingLeft="12dp"
                         android:text="渝中区八一路"
@@ -289,6 +294,8 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
+                    android:layout_marginBottom="@dimen/activity_8"
+                    android:layout_marginTop="@dimen/activity_8"
                     android:layout_weight="1">
 
                     <TextView
@@ -303,8 +310,7 @@
                     <TextView
                         android:id="@+id/activity_job_detail_workDate"
                         android:layout_width="wrap_content"
-                        android:layout_height="match_parent"
-                        android:gravity="center"
+                        android:layout_height="wrap_content"
                         android:paddingLeft="12dp"
                         android:text="12-05至1-31"
                         android:textColor="#222222"
