添加兼职发布界面，代码未实现，修改后台表结构

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -44,7 +44,7 @@
             android:button="@null"
             android:drawableTop="@drawable/job_selector"
             android:gravity="center_horizontal"
-            android:text="消息"
+            android:text="发布"
             android:textColor="@color/select_menu_txt" />
 
         <RadioButton
