--- a/app/src/main/res/layout/parttimejob_fragment.xml
+++ b/app/src/main/res/layout/parttimejob_fragment.xml
@@ -2,7 +2,11 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/top_bar_bg"
+    android:background="@color/white"
     android:orientation="vertical">
 
+    <ListView
+        android:id="@+id/parttime_fragment_lv_list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"></ListView>
 </LinearLayout>
