--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,9 @@
     <color name="black">#000000</color>
     <color name="main_color">#FF027FFD</color>
 
+    <color name="transparent">#00000000</color>
+    <color name="background">#F7F4F0</color>
+    <color name="title_color">#333333</color>
 
     <!-- words A color -->
     <color name="a">#fe601a</color>
