--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -145,4 +145,17 @@
         <item name="android:backgroundDimAmount">0.6</item>
     </style>
 
+
+    <style name="layout_alert_dialog" parent="layout_match_wrap">
+        <item name="android:minWidth">280sp</item>
+        <item name="android:background">@color/white</item>
+    </style>
+
+    <style name="dialog_title_text">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:textColor">@color/c</item>
+        <item name="android:textSize">17sp</item>
+    </style>
+
 </resources>
