--- a/app/src/main/res/layout/activity_my_collect.xml
+++ b/app/src/main/res/layout/activity_my_collect.xml
@@ -10,8 +10,8 @@
         android:id="@+id/activity_main_topbar"
         layout="@layout/top_bar_common"></include>
 
-    <ListView
+    <com.example.longjoy.parttimejob.widget.pullToRefresh.XListView
         android:id="@+id/activity_my_collect_list"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"></com.example.longjoy.parttimejob.widget.pullToRefresh.XListView>
 </LinearLayout>
