--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -13,6 +13,13 @@
     <color name="background">#F7F4F0</color>
     <color name="title_color">#333333</color>
 
+    <color name="drop_down_selected">#7B1FA2</color>
+    <color name="drop_down_unselected">#111111</color>
+
+    <color name="mask_color">#88888888</color>
+    <color name="check_bg">#f2f2f2</color>
+    <color name="un_press_color">#9C27B0</color>
+
     <!-- words A color -->
     <color name="a">#fe601a</color>
     <!-- words B color -->
