--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -12,14 +12,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:gravity="center_horizontal"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/activity_login_iv_logo"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_marginRight="35dp"
-            android:background="@mipmap/logo_red" />
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="@mipmap/ludalogo"
+            android:gravity="center_horizontal" />
     </LinearLayout>
 
     <LinearLayout
@@ -38,7 +40,6 @@
             android:drawablePadding="@dimen/activity_horizontal_margin"
             android:hint="@string/username"
             android:paddingLeft="8dp"
-            android:text="13594350035"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <EditText
@@ -52,7 +53,6 @@
             android:hint="@string/password"
             android:inputType="textPassword"
             android:paddingLeft="8dp"
-            android:text="123456"
             android:textCursorDrawable="@drawable/cursor_bg" />
 
         <Button
