--- a/app/src/main/res/layout/activity_job_detail.xml
+++ b/app/src/main/res/layout/activity_job_detail.xml
@@ -61,7 +61,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/job_info_item_tag1"
+
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:drawableLeft="@mipmap/dui"
@@ -69,7 +69,7 @@
                             android:text="放心"
                             android:textColor="#b8b8b8"
                             android:textSize="15sp"
-                            android:visibility="gone" />
+                            android:visibility="visible" />
 
                         <TextView
                             android:layout_width="wrap_content"
@@ -99,8 +99,20 @@
                             android:visibility="gone" />
 
                         <TextView
-
                             android:id="@+id/job_info_item_tag4"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginLeft="@dimen/activity_8"
+                            android:drawableLeft="@mipmap/dui"
+                            android:drawablePadding="4dp"
+                            android:text="包吃"
+                            android:textColor="#b8b8b8"
+                            android:textSize="15sp"
+                            android:visibility="gone" />
+
+                        <TextView
+
+                            android:id="@+id/job_info_item_tag5"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/activity_8"
@@ -112,7 +124,7 @@
                             android:visibility="gone" />
 
                         <TextView
-                            android:id="@+id/job_info_item_tag5"
+                            android:id="@+id/job_info_item_tag6"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginLeft="@dimen/activity_8"
