--- a/app/src/main/res/layout/job_info_item.xml
+++ b/app/src/main/res/layout/job_info_item.xml
@@ -42,7 +42,7 @@
             android:orientation="horizontal">
 
             <TextView
-                android:id="@+id/job_info_item_tag1"
+
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:drawableLeft="@mipmap/dui"
@@ -50,7 +50,7 @@
                 android:text="放心"
                 android:textColor="#b8b8b8"
                 android:textSize="15sp"
-                android:visibility="gone" />
+                android:visibility="visible" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -80,8 +80,20 @@
                 android:visibility="gone" />
 
             <TextView
-
                 android:id="@+id/job_info_item_tag4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="@dimen/activity_8"
+                android:drawableLeft="@mipmap/dui"
+                android:drawablePadding="4dp"
+                android:text="包吃"
+                android:textColor="#b8b8b8"
+                android:textSize="15sp"
+                android:visibility="gone" />
+
+            <TextView
+
+                android:id="@+id/job_info_item_tag5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_8"
@@ -93,7 +105,7 @@
                 android:visibility="gone" />
 
             <TextView
-                android:id="@+id/job_info_item_tag5"
+                android:id="@+id/job_info_item_tag6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="@dimen/activity_8"
@@ -164,6 +176,7 @@
             android:layout_width="match_parent"
             android:layout_height="0dp"
             android:layout_weight="1"
+            android:paddingBottom="8dp"
             android:gravity="bottom|right"
             android:paddingRight="8dp">
 
