--- a/app/src/main/res/layout/head.xml
+++ b/app/src/main/res/layout/head.xml
@@ -34,7 +34,7 @@
                 android:layout_weight="1"
                 android:drawableTop="@mipmap/paidan"
                 android:gravity="center"
-                android:text="拍单" />
+                android:text="派单" />
 
             <TextView
                 android:id="@+id/head_02"
