添加推送，未调试成功

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -29,6 +29,7 @@
                 android:textColor="@color/white" />
 
             <EditText
+                android:id="@+id/activity_forgot_password_tele"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/activity_8"
@@ -60,6 +61,7 @@
                 android:layout_weight="3">
 
                 <EditText
+                    android:id="@+id/activity_forgot_password_code"
                     android:layout_width="0dp"
                     android:layout_height="match_parent"
                     android:layout_weight="3"
@@ -68,6 +70,7 @@
                     android:textCursorDrawable="@drawable/cursor_bg" />
 
                 <Button
+                    android:id="@+id/activity_forgot_password_btn_verification"
                     android:layout_width="24dp"
                     android:layout_height="match_parent"
                     android:layout_marginLeft="@dimen/activity_8"
@@ -95,11 +98,12 @@
                 android:textColor="@color/white" />
 
             <EditText
-                android:id="@+id/activity_main_identifyCode"
+                android:id="@+id/activity_forgot_password_newPwd"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_marginLeft="@dimen/activity_8"
                 android:layout_weight="3"
+                android:inputType="textPassword"
                 android:background="@drawable/edittext_bg"
                 android:paddingLeft="8dp"
                 android:textCursorDrawable="@drawable/cursor_bg" />
@@ -107,6 +111,7 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/activity_forgot_password_btn_modify"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
